     as a server, continously.

Fixed: If the monitor configuration file contains a string with unbalanced escape sequences, Monit may crash upon startup.

Fixed: If the password in the 'set mmonit' URL contains only binary characters, Monit fails to start and reports the following error:
        AssertException: n >= 0
         raised in Str_ndup at src/util/Str.c:315
        Aborted
     

Version 5.34.3

Fixed: If the ping statement did not explicitly specify an outgoing address but a previous ping statement did, the same address was shared by both statements.

Fixed: Monit may crash upon stopping if the ping statement is used in conjunction with the address option.

Fixed: If a directory is set in the 'allow' option of the 'set httpd' statement, instead of file or string, Monit hangs on start.


Version 5.34.2

Fixed: Network protocol test may sporadically fail with "Poll failed: Interrupted system call" error.


Version 5.34.1

Fixed: The "check program" no longer keeps the zombie process between cycles.


Version 5.34.0

New: Added the "timeout" option to the exec action. It can be set either globally (in the "set limit" statement
using the "execTimeout" option) or locally (using the "timeout <number> seconds" in the exec action). The default
timeout is 0 (no limit), to keep the original behaviour. Thanks to Lutz Mader.

New: Issue #1074: Added a hardlink test to file, directory and fifo checks. Thanks to Lutz Mader. Example:
    check directory upload with path /data/upload
       if hardlink > 32000 then alert

New: Issue #1070: Added the system boot time and uptime to the XML interface. Thanks
to Lutz Mader.

New: Added support to add Monit to M/Monit hostgroup. Example:
 set mmonit
     https://monit:mypassword@mmonit.foo.bar:8443/collector
     with hostgroups [ Oslo, "Mail servers" ]

New: Add support for checking the output of a program for changes. This can be used to alert on changes of system