@@ -24,6 +24,11 @@ Fixed: If the password in the 'set mmonit' URL contains only binary characters, 
         AssertException: n >= 0
          raised in Str_ndup at src/util/Str.c:315
         Aborted
+
+Fixed: If the "every <cron>" statement contained a syntax error, Monit terminated with the following error message:
+        AssertException: n < 5 && n >= 0
+         raised in Time_incron at src/system/Time.c:1566
+        Aborted
      
 
 Version 5.34.3
